relay-general/src/pii/snapshots/processor__basic_stripping.snap
---
source: relay-general/src/pii/processor.rs
expression: event
---
{
  "logentry": {
    "formatted": "Hello world!"
  },
  "request": {
    "headers": [
      [
        "Cookie",
        null
      ],
      [
        "X-Forwarded-For",
        "[ip]"
      ]
    ],
    "env": {
      "SECRET_KEY": null
    }
  },
  "tags": [
    [
      "forwarded_for",
      "127.0.0.1"
    ]
  ],
  "_meta": {
    "request": {
      "env": {
        "SECRET_KEY": {
          "": {
            "rem": [
              [
                "@anything:remove",
                "x"
              ]
            ]
          }
        }
      },
      "headers": {
        "0": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:remove",
                  "x"
                ]
              ]
            }
          }
        },
        "1": {
          "1": {
            "": {
              "rem": [
                [
                  "@ip",
                  "s",
                  0,
                  4
                ]
              ],
              "len": 9
            }
          }
        }
      }
    }
  }
}
