relay-general/src/pii/snapshots/processor__impossible_selector.snap
---
source: relay-general/src/pii/processor.rs
expression: event
---
{
  "extra": {
    "myvalue": "foobar"
  }
}
