relay-general/src/pii/snapshots/processor__prefixes.snap
---
source: relay-general/src/pii/processor.rs
expression: event
---
{
  "logentry": {
    "formatted": null
  },
  "_meta": {
    "logentry": {
      "formatted": {
        "": {
          "rem": [
            [
              "organization:@anything:remove",
              "x"
            ]
          ]
        }
      }
    }
  }
}
