relay-general/src/pii/snapshots/processor__quoted_keys.snap
---
source: relay-general/src/pii/processor.rs
expression: event
---
{
  "extra": {
    "do not strip": "foo",
    "special garbage": null
  },
  "_meta": {
    "extra": {
      "special garbage": {
        "": {
          "rem": [
            [
              "@anything:remove",
              "x"
            ]
          ]
        }
      }
    }
  }
}
