relay-general/src/pii/snapshots/processor__weird_wildcard_selectors.snap
---
source: relay-general/src/pii/processor.rs
expression: event
---
{
  "extra": {
    "myvalue": null
  },
  "_meta": {
    "extra": {
      "myvalue": {
        "": {
          "rem": [
            [
              "@anything:remove",
              "x"
            ]
          ]
        }
      }
    }
  }
}
